@@ -72,6 +72,7 @@ export default MultiTableController.extend(AutoCounterColumn, {
     id: 'log',
     headerTitle: 'Successful/Last Attempt Log',
     cellComponentName: 'em-table-tasks-log-link-cell',
+    enableSearch: false,
     getCellContent: function (row) {
       var attemptID = row.get("successfulAttemptID");
       if(!attemptID) {
