@@ -27,7 +27,7 @@
     }}
   </div><div class="search-element">
     <label for="pwd">User:</label>
-    {{input value=user
+    {{input value=requestUser
     type="text"
     class="form-control input-sm"
     placeholder="Search..."
